Fixed some breaks in the Webpage design, both for the mobile and web view

--- a/app.css
+++ b/app.css
@@ -178,6 +178,10 @@
     input:focus {
         background: rgb(172, 168, 168);
     }
+
+    .check-btn {
+        display: inline-block;
+    }
     
     .check {
         border: 2px solid #c76a13;
@@ -198,11 +202,10 @@
     .card {
         display: flex;
         flex-direction: column;
-        -webkit-box-shadow: 0px 4px 14px 2px #aaa7a4; 
-        box-shadow: 0px 4px 14px 2px #aaa7a4;
     }
 
     .nav {
+        width: 100%;
         display: flex;
         border-bottom-left-radius: 20px;
         -webkit-box-shadow: 0px 10px 6px -1px #E98020; 
@@ -339,7 +342,7 @@
 
     .hint-container {
         margin-top: 2rem;
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
         padding: 1.2rem 2rem;
         -webkit-box-shadow: 0px 4px 14px 2px #aaa7a4; 
         box-shadow: 0px 4px 14px 2px #aaa7a4;
@@ -367,6 +370,11 @@
     input:focus {
         background: rgb(172, 168, 168);
     }
+
+    .check-btn {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
     
     .check {
         border: 2px solid #c76a13;
@@ -374,5 +382,69 @@
     
     .check:hover {
         background: #c76a13;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    [alt="GuessMe-logo"] {
+        width: 6rem;
+    }
+
+    .level-nav {
+        margin-left: 4rem;
+    }
+
+    .nav {
+        width: 100%;
+        margin-right: 0rem;
+    }
+    
+    .level {
+        margin-top: 1rem;
+        margin-right: .3rem;
+        font-size: 0.8rem;
+    }
+    
+    .level-display {
+        border: 1px solid #E98020;
+        width: 1.5rem;
+        font-size: 0.8rem;
+        height: 1.5rem;
+        border-radius: 50%;
+        text-align: center;
+        line-height: 1.5rem;
+    }
+    
+    .guessed-nav {
+        display: flex;
+        margin-left: 0.58rem;
+        margin-right: 0.8rem;
+    }
+    
+    .guessed {
+        margin-right: .3rem;
+        font-size: 0.8rem;
+    }
+    
+    .guessed-display {
+        width: 1.59rem;
+        font-size: 0.7rem;
+        height: 1.59rem;
+        line-height: 1.59rem;
+    }
+
+    .help {
+        font-size: 0.8rem;
+        padding: 0.3rem 0.3rem;
+        letter-spacing: initial;
+        border-radius: 6px;
+    }
+    
+    .help-display {
+        margin-left: 0.2rem;
+        width: 1.3rem;
+        font-size: 0.7rem;
+        height: 1.3rem;
+        line-height: 1.3rem;
     }
 }
